# rust-warp-jwt-sql-crud

./: .env  Cargo.toml  README.md  db.sql  debug.Dockerfile  docker-compose.yml  release.Dockerfile
scripts/: run_hotdeploy.sh
src/: main.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/dto/: login.rs
src/environment/: mod.rs
src/error/: mod.rs
src/handlers/: mod.rs
src/users/: mod.rs
