[package]
name = "rust-warp-jwt-sql-crud"
version = "0.1.0"
authors = ["Leonardo Devai <leonardo@devai.io>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
listenfd = "0.3.3"
hyper = "0.13.6"
tokio = { version = "0.2.21", features = ["macros"] }
warp = "0.2.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.59"
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = "=7.2"
argonautica = "0.2.0"
clap = "3.0.0-beta.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
anyhow = "1.0.34"
thiserror = "1.0"
